--- a/src/TechJobs/Views/Search/Index.cshtml
+++ b/src/TechJobs/Views/Search/Index.cshtml
@@ -29,8 +29,18 @@
 
 @if (ViewBag.jobs != null)
 {
-
     <h3>@ViewBag.jobs.Count Result(s)</h3>
+    foreach (Dictionary<string, string> jobs in ViewBag.jobs)
+    {
+        <table class="job-listing">
+            @foreach (KeyValuePair<string, string> job in jobs)
+            {
+                <tr>
+                    <th>@job.Key.Substring(0, 1).ToUpper()@job.Key.Substring(1, job.Key.Length - 1):</th>
+                    <td><a asp-controller="List" asp-action="Jobs" asp-route-column="@job.Key" asp-route-value="@job.Value">@job.Value</a></td>
+                </tr>
+            }
+        </table>
+    }
 
-    // TODO #2 - Loop over jobs dictionary and display all job fields 
 }
